image size on smaller screen fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,8 @@ body {
 .heading {
   text-align: left;
 }
+
+@media screen and (max-width: 600px) {
+  
+  
+}
